--- a/environment.yml
+++ b/environment.yml
@@ -254,6 +254,10 @@ dependencies:
     - click==8.0.4
     - cryptography==36.0.1
     - cytoolz==0.11.2
+    - dash-core-components==2.0.0
+    - dash-daq==0.5.0
+    - dash-html-components==2.0.0
+    - dash-table==5.0.0
     - debugpy==1.5.1
     - fonttools==4.30.0
     - imagecodecs==2022.2.22
